# python-corporate-styleguide

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_docs.yml
docs/: index.md
docs/structure/: fastapi.md
draft/: index.html
structure/fastapi/: index.html
